# sshrunner

./: .gitignore  LICENSE  README.md  docker-compose.test.yml  pyproject.toml  sshrunner.py
.github/workflows/: ci.yml  publish.yml
examples/: demo.py  test_docker.py
