[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sshrunner"
version = "0.1.0"
description = "Run commands across multiple servers over SSH — parallel, with jump host support and broadcast shell."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["paramiko>=3.0"]

keywords = ["ssh", "devops", "automation", "parallel", "remote", "sysadmin"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/eya-lachhab/sshrunner"
Issues = "https://github.com/eya-lachhab/sshrunner/issues"

[project.optional-dependencies]
dev = ["twine", "build"]
